// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Input /> error renders 1`] = `
<div>
  <label
    for="input-1"
    id="input-1-label"
  >
    Label
  </label>
  <input
    aria-labelledby="input-1-label input-1-error"
    id="input-1"
    type="text"
    value=""
  />
  <span
    id="input-1-error"
    role="alert"
  >
    Error
  </span>
</div>
`;

exports[`<Input /> help renders 1`] = `
<div>
  <label
    for="input-1"
    id="input-1-label"
  >
    Label
    <span>
      Help
    </span>
  </label>
  <input
    aria-labelledby="input-1-label"
    id="input-1"
    type="text"
    value=""
  />
</div>
`;

exports[`<Input /> label renders 1`] = `
<div>
  <label
    for="input-1"
    id="input-1-label"
  >
    Label
  </label>
  <input
    aria-labelledby="input-1-label"
    id="input-1"
    type="text"
    value=""
  />
</div>
`;

exports[`<Input /> renders 1`] = `
<div>
  <input
    id="input-1"
    type="text"
    value=""
  />
</div>
`;
